[package]
# I CAN'T BELIEVE I OWN THE CAFFEINE CRATE!!!!
name = "caffeine"
version = "0.1.1"
edition = "2021"
description = "Simple hash table implementation using open addressing. Written for use with my crafting interpeters tutorial implementation."
license = "MIT"

[dependencies]
rand = "0.8.5"

# It's pretty fitting that I own this crate bc I am
# a literal junkie for Caffeine, like I fiend for it harder
# than I do for Adderall and I used to snort Caffeine pills

# Hope you have fun using my crate!