[package]
# I CAN'T BELIEVE I OWN THE CAFFEINE CRATE!!!! I feel so cool
name = "caffeine"
version = "0.1.3"
edition = "2021"
description = "Simple hash table implementation using open addressing. Written for use with my crafting interpeters tutorial implementation."
license = "LOSL"
license-file = "LICENSE.md"

[dependencies]
rand = "0.8.5"

# It's pretty fitting that I own this crate bc I am
# a literal junkie for Caffeine

# Hope you have fun using my crate!