[package]
# I CAN'T BELIEVE I OWN THE CAFFEINE CRATE!!!! I feel so cool
name = "caffeine"
authors = ["MEEEEEEEEEE!!"]
version = "0.2.0"
edition = "2021"
description = "Collection of data structures I'm writing for fun. Originally written for use with my crafting interpeters tutorial implementation."
license-file = "LICENSE.md"

[dependencies]
rand = "0.8.5"

# It's pretty fitting that I own this crate bc I am
# a literal junkie for Caffeine

# Really hope a future potential employer doesn't see
# my lunacy here and I miss out on a good job because
# I decided to go fucking crazy here

# Hope you have fun using my crate!
